--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.12.0.5</h2>
+<ul>
+	<li>Some UI tidying up and bug fixes</li>
+	<li>Stockcar Extreme - fix for app trying (and failing) to install plugin on every start (the plugin .dll must be install manually)</li>
+	<li>R3E - download player rating data in background (should improve start up time)</li>
+	<li>pCars / pCars2 - allow finer control over car class mapping using an optional pCarsCarNames field in the car classes JSON)</li>
+	<li>AMS2 - wired up a bit more of the existing pCars2 logic (e.g. weather conditions)</li>
+	<li>Added F1 2020 to games list (spotter only)</li>
+</ul>
 <h2>Version 4.12.0.1</h2>
 <ul>
-	<li>Fixed SteamVR detection on non-English installs; Fixed some issues in speech recognition initialisation error handling</li>
+	<li>Fixed SteamVR detection on non-English installs</li>
+	<li>Fixed some issues in speech recognition initialisation error handling</li>
 	<li>Fix a crash bug preventing the app from starting when user-defined macros are incomplete</li>
 	<li>Allow existing driver name (opponent name) recordings to be used to generate personalisations (note that these may sound a bit robotic - some will probably be fine, some will be unusable, most will be somewhere in between). If you're waiting for your name to be added to the app check the My Name list again - it might be available</li>
 	<li>Tweaked the My Name list box so you can now type into it (this is needed because there are now about 8000 entries in this list)</li>
