help file updates

--- a/public/About_Customising_NameRequests.html
+++ b/public/About_Customising_NameRequests.html
@@ -136,15 +136,15 @@
     </div>
     <br>
 <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
-&nbsp;The names in CC are not robot Text-To-Speech, they have all been individually recorded by Jim, not just the name but the name in 24 individualised messages (including some sweary ones so it's not the computer swearing at you, it's Jim <i>personally</i>).  There are now 750 names (x 24 recordings, remember) which has been a major piece of work.<br>
+ The names in CC are not robot Text-To-Speech, they have all been individually recorded by Jim, not just the name but the name in 24 individualised messages (including some sweary ones so it's not the computer swearing at you, it's Jim <i>personally</i>).  There are now 750 names (x 24 recordings, remember) which has been a major piece of work.<br>
 <br>
-&nbsp;If none of the 750 work for you first <a href="http://thecrewchief.org/showthread.php?351-Full-list-of-all-My-Name-entries-(-quot-Personalisations-quot-)">check</a> whether your name or something close to is not already in CC then read <a href="http://thecrewchief.org/showthread.php?491-New-personalisation-requests">Jim's note</a>, only then add your name request to the queue in the <a href="http://thecrewchief.org/forumdisplay.php?7-Names-and-personalisations">Crew Chief Forum</a>.<br>
+ If none of the 750 work for you first <a href="http://thecrewchief.org/showthread.php?351-Full-list-of-all-My-Name-entries-(-quot-Personalisations-quot-)">check</a> whether your name or something close to is not already in CC then read <a href="http://thecrewchief.org/showthread.php?491-New-personalisation-requests">Jim's note</a>, only then add your name request to the queue in the <a href="http://thecrewchief.org/forumdisplay.php?7-Names-and-personalisations">Crew Chief Forum</a>.<br>
 <br>
-&nbsp;Then wait.<br>
+ Then wait.<br>
 <br>
-&nbsp;Possibly a long time.<br>
+ Possibly a long time.<br>
 <br>
-&nbsp;Possibly forever!<br>
+ Possibly forever!<br>
 </div>
     <hr width="100%" size="2">
     <table width="100%" cellspacing="0" cellpadding="0" border="0"
