--- a/public/About_blurb.html
+++ b/public/About_blurb.html
@@ -137,7 +137,7 @@
     <br>
 <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
 <img src="https://tonywhitley.github.io/Help/CrewChiefHelp.jpg" title="MindMap of the topics"
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alt="MindMap of the topics" width="800" height="412"><br>
+      alt="MindMap of the topics" width="800" height="412"><br>
 <br>
 </div>
     <hr width="100%" size="2">
