--- a/public/About_Contact.html
+++ b/public/About_Contact.html
@@ -137,12 +137,12 @@
     <br>
 <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
 <br>
-&nbsp;<a href="http://thecrewchief.org/forum.php">Crew Chief Forum</a><br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://thecrewchief.org/showthread.php?28-F-a-q">FAQ</a><br>
+ <a href="http://thecrewchief.org/forum.php">Crew Chief Forum</a><br>
+     <a href="http://thecrewchief.org/showthread.php?28-F-a-q">FAQ</a><br>
 <br>
-&nbsp;<a href="https://discord.com/channels/322071247032942592/406527523455893504">Discord channel</a><br>
+ <a href="https://discord.com/channels/322071247032942592/406527523455893504">Discord channel</a><br>
 <br>
-&nbsp;<a href="https://gitlab.com/mr_belowski/CrewChiefV4">Source code (Gitlab)</a><br>
+ <a href="https://gitlab.com/mr_belowski/CrewChiefV4">Source code (Gitlab)</a><br>
 <br>
 </div>
     <hr width="100%" size="2">
