fixed otterhud stuff

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.12.0.6</h2>
+<ul>
+	<li>R3E - fixed OtterHud integration</li>
+</ul>
 <h2>Version 4.12.0.5</h2>
 <ul>
 	<li>Some UI tidying up and bug fixes</li>
