--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.12.0.7</h2>
+<ul>
+	<li>Hotfix for issues with VR overlay windows</li>
+	<li>Corrected time deltas in multiclass racing on pCars2 / AMS2</li>
+	<li>R3E - fixed some missing tyre type mappings</li>
+</ul>
 <h2>Version 4.12.0.6</h2>
 <ul>
 	<li>R3E - fixed OtterHud integration</li>
