--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h2>Version 4.12.0.8</h2>
+<ul>
+	<li>Corrected VR overlay default behaviour (should fix the remaining issues with the overlays)</li>
+	<li>Corrected app name being "5" on the Windows Sounds mixer (stupid fat-fingered typo, sorry)</li>
+	<li>Added "what's my oil temp" and "what's my water temp" voice commands</li>
+	<li>R3E - tweaked car class mapping for WTCR</li>
+</ul>
 <h2>Version 4.12.0.7</h2>
 <ul>
 	<li>Hotfix for issues with VR overlay windows</li>
