Help file update * Add Html Agility Pack licence * Add PC3 and RBR

--- a/HelpFiles/index.html
+++ b/HelpFiles/index.html
@@ -34,35 +34,40 @@
           <tr>
             <td width="33%" valign="top" align="center">Assetto Corsa<br>
             </td>
-            <td width="33%" valign="top" align="center">F1 2018/2019**<br>
+            <td width="33%" valign="top" align="center">F1 2018**<br>
             </td>
             <td width="33%" valign="top" align="center">Project Cars<br>
             </td>
           </tr>
           <tr>
             <td valign="top" align="center">Assetto Corsa Competizione*</td>
-            <td valign="top" align="center">F1 2020**</td>
+            <td valign="top" align="center">F1 2019**</td>
             <td valign="top" align="center">Project Cars 2<br>
             </td>
           </tr>
           <tr>
             <td valign="top" align="center">Automobilista<br>
             </td>
+            <td valign="top" align="center">F1 2020**</td>
+            <td valign="top" align="center">Project Cars 3<br>
+            </td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Automobilista 2 </td>
             <td valign="top" align="center">Formula Truck 2013<br>
             </td>
             <td valign="top" align="center">RaceRoom Racing Experience<br>
             </td>
           </tr>
           <tr>
-            <td valign="top" align="center">Automobilista 2<br>
-            </td>
+            <td valign="top" align="center">Copa Petrobras de Marcas </td>
             <td valign="top" align="center">Game Stockcar 2013<br>
             </td>
             <td valign="top" align="center">rFactor 1<br>
             </td>
           </tr>
           <tr>
-            <td valign="top" align="center">Copa Petrobras de Marcas<br>
+            <td valign="top" align="center">Richard Burns Rally<br>
             </td>
             <td valign="top" align="center">iRacing<br>
             </td>
@@ -85,6 +90,7 @@
       <br>
       There is an <b>Android </b>version for Project Cars 1and 2 on <a
 href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief.full&amp;gl=GB">Google
+
 
         Play</a><br>
       <br>
