--- a/public/About_Licenses.html
+++ b/public/About_Licenses.html
@@ -38,8 +38,10 @@
 
 
 
+
                       Corsa</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_AssettoCorsaCompetizione.html"><span>Assetto
+
 
 
 
@@ -52,15 +54,18 @@
 
 
 
+
                       Cars</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_ProjectCars2.html"><span>Project
 
 
 
 
-                      Cars 2 /<br>
+
+                      Cars 2 /&nbsp;3&nbsp; &amp;<br>
                       Automobilista 2</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_RaceRoomRacingExperience.html"><span>RaceRoom
+
 
 
 
@@ -74,11 +79,14 @@
 
 
 
+
                       2</span></a></li>
+                <li><a href="GettingStarted_GameSpecific_RichardBurnsRally.html"><span>Richard Burns Rally</span></a></li>
               </ul>
             </li>
             <li><a href="GettingStarted_nAudio.html"><span>nAudio </span></a></li>
             <li><a href="VoiceRecognition_InstallationTraining.html"><span>Voice
+
 
 
 
@@ -91,6 +99,7 @@
             <li><a href="Speech_DriverNames.html"><span>Driver Names </span></a></li>
             <li class="last"><a href="Speech_Swearing.html"><span>Swearing</span></a></li>
             <li class="last"><a href="Speech_TextToSpeech.html"><span>Text
+
 
 
 
@@ -109,12 +118,14 @@
 
 
 
+
                   &amp; Training</span></a> </li>
             <li class="has-sub"><a href="#"><span>Voice Commands</span></a>
               <ul>
                 <li><a href="VoiceRecognition_VoiceCommandsAll.html"><span>All</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsGrouped.html"><span>Grouped</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsCheatSheet.html"><span>Cheat
+
 
 
 
@@ -127,8 +138,10 @@
 
 
 
+
                   Macros</span></a></li>
             <li class="last"><a href="VoiceRecognition_FreeDictationChatMessages.html"><span>Free
+
 
 
 
@@ -161,6 +174,7 @@
 
 
 
+
                   line switches</span></a> </li>
           </ul>
         </li>
@@ -184,8 +198,10 @@
 
 
 
+
                       Landmarks</span></a></li>
                 <li><a href="About_Customising_VoicePacks.html"><span>Voice
+
 
 
 
@@ -194,8 +210,10 @@
 
 
 
+
                       Requests</span></a></li>
                 <li><a href="About_Customising_CarClasses.html"><span>Car
+
 
 
 
@@ -212,62 +230,138 @@
     </div>
     <br>
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
-<h4>Crew Chief licence</h4>
-The MIT License (MIT)<br>
-Copyright 2019-2020 Britton IT Ltd.<br>
-<br>
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br>
-<br>
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br>
-<br>
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.<br>
-<br>
-<br>
-These licences apply to components used by Crew Chief.<br>
-<br>
-<h4>Newtonsoft JSON licence</h4>
-The MIT License (MIT)<br>
-<br>
-Copyright (c) 2007 James Newton-King<br>
-<br>
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br>
-<br>
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br>
-<br>
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.<br>
-<h4>OpenVR licence</h4>
-Copyright (c) 2015, Valve Corporation<br>
-All rights reserved.<br>
-<br>
-Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:<br>
-<br>
-1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.<br>
-<br>
-2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.<br>
-<br>
-3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.<br>
-<br>
-THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.<br>
-<h4>SharpDX licence</h4>
-Copyright (c) 2010-2012 SharpDX - Alexandre Mutel<br>
-<br>
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br>
-<br>
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br>
-<br>
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.<br>
-<h4>GameOverlay.net licence</h4>
-MIT License<br>
-<br>
-Copyright (c) 2016-2019 michel-pi<br>
-Copyright (c) 2010-2014 SharpDX - Alexandre Mutel<br>
-<br>
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:<br>
-<br>
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.<br>
-<br>
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.<br>
-</div>
+      <h4>Crew Chief licence</h4>
+      The MIT License (MIT)<br>
+      Copyright 2019-2020 Britton IT Ltd.<br>
+      <br>
+      Permission is hereby granted, free of charge, to any person
+      obtaining a copy of this software and associated documentation
+      files (the "Software"), to deal in the Software without
+      restriction, including without limitation the rights to use, copy,
+      modify, merge, publish, distribute, sublicense, and/or sell copies
+      of the Software, and to permit persons to whom the Software is
+      furnished to do so, subject to the following conditions:<br>
+      <br>
+      The above copyright notice and this permission notice shall be
+      included in all copies or substantial portions of the Software.<br>
+      <br>
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+      EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+      MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+      NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+      HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+      WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+      OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+      DEALINGS IN THE SOFTWARE.<br>
+      <br>
+      <br>
+      These licences apply to components used by Crew Chief.<br>
+      <br>
+      <h4>Newtonsoft JSON licence</h4>
+      The MIT License (MIT)<br>
+      <br>
+      Copyright (c) 2007 James Newton-King<br>
+      <br>
+      Permission is hereby granted, free of charge, to any person
+      obtaining a copy of this software and associated documentation
+      files (the "Software"), to deal in the Software without
+      restriction, including without limitation the rights to use, copy,
+      modify, merge, publish, distribute, sublicense, and/or sell copies
+      of the Software, and to permit persons to whom the Software is
+      furnished to do so, subject to the following conditions:<br>
+      <br>
+      The above copyright notice and this permission notice shall be
+      included in all copies or substantial portions of the Software.<br>
+      <br>
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+      EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+      MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+      NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+      HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+      WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+      OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+      DEALINGS IN THE SOFTWARE.<br>
+      <h4>OpenVR licence</h4>
+      Copyright (c) 2015, Valve Corporation<br>
+      All rights reserved.<br>
+      <br>
+      Redistribution and use in source and binary forms, with or without
+      modification, are permitted provided that the following conditions
+      are met:<br>
+      <br>
+      1. Redistributions of source code must retain the above copyright
+      notice, this list of conditions and the following disclaimer.<br>
+      <br>
+      2. Redistributions in binary form must reproduce the above
+      copyright notice, this list of conditions and the following
+      disclaimer in the documentation and/or other materials provided
+      with the distribution.<br>
+      <br>
+      3. Neither the name of the copyright holder nor the names of its
+      contributors may be used to endorse or promote products derived
+      from this software without specific prior written permission.<br>
+      <br>
+      THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
+      CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
+      INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+      MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+      DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS
+      BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+      EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED
+      TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
+      DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+      ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR
+      TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
+      THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
+      SUCH DAMAGE.<br>
+      <h4>SharpDX licence</h4>
+      Copyright (c) 2010-2012 SharpDX - Alexandre Mutel<br>
+      <br>
+      Permission is hereby granted, free of charge, to any person
+      obtaining a copy of this software and associated documentation
+      files (the "Software"), to deal in the Software without
+      restriction, including without limitation the rights to use, copy,
+      modify, merge, publish, distribute, sublicense, and/or sell copies
+      of the Software, and to permit persons to whom the Software is
+      furnished to do so, subject to the following conditions:<br>
+      <br>
+      The above copyright notice and this permission notice shall be
+      included in all copies or substantial portions of the Software.<br>
+      <br>
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+      EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+      MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+      NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+      HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+      WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+      OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+      DEALINGS IN THE SOFTWARE.<br>
+      <h4>GameOverlay.net licence</h4>
+      MIT License<br>
+      <br>
+      Copyright (c) 2016-2019 michel-pi<br>
+      Copyright (c) 2010-2014 SharpDX - Alexandre Mutel<br>
+      <br>
+      Permission is hereby granted, free of charge, to any person
+      obtaining a copy of this software and associated documentation
+      files (the "Software"), to deal in the Software without
+      restriction, including without limitation the rights to use, copy,
+      modify, merge, publish, distribute, sublicense, and/or sell copies
+      of the Software, and to permit persons to whom the Software is
+      furnished to do so, subject to the following conditions:<br>
+      <br>
+      The above copyright notice and this permission notice shall be
+      included in all copies or substantial portions of the Software.<br>
+      <br>
+      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+      EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+      MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+      NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+      HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR <font face="Lucida
+        Sans Unicode">OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+        TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH
+        THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.<br>
+      </font></div>
     <hr width="100%" size="2">
     <table style="font-family:'Lucida Sans Unicode';font-size:13px;" width="100%" cellspacing="0" cellpadding="0" border="0">
       <tbody>
@@ -277,6 +371,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <td valign="top"><br>
           </td>
           <td width="20%" valign="top" align="right"><a href="https://discord.com/channels/322071247032942592/406527523455893504">Discord
+
 
 
 
