--- a/public/GettingStarted_GameSpecific_RichardBurnsRally.html
+++ b/public/GettingStarted_GameSpecific_RichardBurnsRally.html
@@ -230,11 +230,10 @@
     </div>
     <br>
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
-You need Morten Roslev's Python plugin for Assetto Corsa. The app will check if this plugin is installed in the correct game folder. If it isn't, the app will offer to install it for you when you start the app with Assetto Corsa selected. In most cases all you need do is click the <b>OK</b> button in the popup.<br>
+See this post on the forum:
 <br>
-If this process fails for any reason, copy the folder called 'CrewChiefEx' from the app's plugins folder - usually C:\Program Files (x86)\Britton IT Ltd\CrewChiefV4\plugins\assettocorsa\apps\python\CrewChiefEx to the Asstto Corsa python folder (usually something like C:\Program Files (x86)\Steam\steamapps\common\assettocorsa\apps\python). You might need to enable this plugin in the Assetto Corsa UI. Once you've done this just select the game from Crew Chief's Game menu and press the Start button.<br>
-<br>
-</div>
+<a href="http://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539">http://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539</a>
+  </div>
     <hr width="100%" size="2">
     <table style="font-family:'Lucida Sans Unicode';font-size:13px;" width="100%" cellspacing="0" cellpadding="0" border="0">
       <tbody>
