--- a/HelpFiles/GettingStarted_GameSpecific_RichardBurnsRally.html
+++ b/HelpFiles/GettingStarted_GameSpecific_RichardBurnsRally.html
@@ -9,10 +9,11 @@
     <script src="jquery-latest.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
   </head>
-  <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#dddddd" alink="#EE0000">
+  <body vlink="#551A8B" text="#000000" link="#0000EE" bgcolor="#dddddd"
+    alink="#EE0000">
 <div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
-Crew Chief is simply plug & play with Project Cars 2 and 3, there is nothing to set up.<br>
-</div>
-
-</body>
+See this post on the forum:
+<br>
+<a href="http://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539">http://thecrewchief.org/showthread.php?1851-Richard-Burns-Rally-Crew-Chief-setup-and-known-issues&amp;p=7539</a></font>
+  </body>
 </html>
