--- a/HelpFiles/menu.html
+++ b/HelpFiles/menu.html
@@ -40,9 +40,11 @@
 
 
 
+
                       Corsa</span></a></li>
                 <li><a
                     href="GettingStarted_GameSpecific_AssettoCorsaCompetizione.html"><span>Assetto
+
 
 
 
@@ -57,6 +59,7 @@
 
 
 
+
                       Cars</span></a></li>
                 <li><a
                     href="GettingStarted_GameSpecific_ProjectCars2.html"><span>Project
@@ -64,10 +67,12 @@
 
 
 
-                      Cars 2 /<br>
+
+                      Cars 2 /&nbsp;3&nbsp; &amp;<br>
                       Automobilista 2</span></a></li>
                 <li><a
                     href="GettingStarted_GameSpecific_RaceRoomRacingExperience.html"><span>RaceRoom
+
 
 
 
@@ -82,11 +87,14 @@
 
 
 
+
                       2</span></a></li>
+                <li><a href="GettingStarted_GameSpecific_RichardBurnsRally.html"><span>Richard Burns Rally</span></a></li>
               </ul>
             </li>
             <li><a href="GettingStarted_nAudio.html"><span>nAudio </span></a></li>
             <li><a href="VoiceRecognition_InstallationTraining.html"><span>Voice
+
 
 
 
@@ -99,6 +107,7 @@
             <li><a href="Speech_DriverNames.html"><span>Driver Names </span></a></li>
             <li class="last"><a href="Speech_Swearing.html"><span>Swearing</span></a></li>
             <li class="last"><a href="Speech_TextToSpeech.html"><span>Text
+
 
 
 
@@ -118,6 +127,7 @@
 
 
 
+
                   &amp; Training</span></a> </li>
             <li class="has-sub"><a href="#"><span>Voice Commands</span></a>
               <ul>
@@ -125,6 +135,7 @@
                 <li><a href="VoiceRecognition_VoiceCommandsGrouped.html"><span>Grouped</span></a></li>
                 <li><a
                     href="VoiceRecognition_VoiceCommandsCheatSheet.html"><span>Cheat
+
 
 
 
@@ -137,9 +148,11 @@
 
 
 
+
                   Macros</span></a></li>
             <li class="last"><a
                 href="VoiceRecognition_FreeDictationChatMessages.html"><span>Free
+
 
 
 
@@ -173,6 +186,7 @@
 
 
 
+
                   line switches</span></a> </li>
           </ul>
         </li>
@@ -196,8 +210,10 @@
 
 
 
+
                       Landmarks</span></a></li>
                 <li><a href="About_Customising_VoicePacks.html"><span>Voice
+
 
 
 
@@ -206,8 +222,10 @@
 
 
 
+
                       Requests</span></a></li>
                 <li><a href="About_Customising_CarClasses.html"><span>Car
+
 
 
 
@@ -237,6 +255,7 @@
           </td>
           <td width="20%" valign="top" align="right"><a
 href="https://discord.com/channels/322071247032942592/406527523455893504">Discord
+
 
 
 
