--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,10 @@
 
 
 
+
                       Corsa</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_AssettoCorsaCompetizione.html"><span>Assetto
+
 
 
 
@@ -52,15 +54,18 @@
 
 
 
+
                       Cars</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_ProjectCars2.html"><span>Project
 
 
 
 
-                      Cars 2 /<br>
+
+                      Cars 2 /&nbsp;3&nbsp; &amp;<br>
                       Automobilista 2</span></a></li>
                 <li><a href="GettingStarted_GameSpecific_RaceRoomRacingExperience.html"><span>RaceRoom
+
 
 
 
@@ -74,11 +79,14 @@
 
 
 
+
                       2</span></a></li>
+                <li><a href="GettingStarted_GameSpecific_RichardBurnsRally.html"><span>Richard Burns Rally</span></a></li>
               </ul>
             </li>
             <li><a href="GettingStarted_nAudio.html"><span>nAudio </span></a></li>
             <li><a href="VoiceRecognition_InstallationTraining.html"><span>Voice
+
 
 
 
@@ -91,6 +99,7 @@
             <li><a href="Speech_DriverNames.html"><span>Driver Names </span></a></li>
             <li class="last"><a href="Speech_Swearing.html"><span>Swearing</span></a></li>
             <li class="last"><a href="Speech_TextToSpeech.html"><span>Text
+
 
 
 
@@ -109,12 +118,14 @@
 
 
 
+
                   &amp; Training</span></a> </li>
             <li class="has-sub"><a href="#"><span>Voice Commands</span></a>
               <ul>
                 <li><a href="VoiceRecognition_VoiceCommandsAll.html"><span>All</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsGrouped.html"><span>Grouped</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsCheatSheet.html"><span>Cheat
+
 
 
 
@@ -127,8 +138,10 @@
 
 
 
+
                   Macros</span></a></li>
             <li class="last"><a href="VoiceRecognition_FreeDictationChatMessages.html"><span>Free
+
 
 
 
@@ -161,6 +174,7 @@
 
 
 
+
                   line switches</span></a> </li>
           </ul>
         </li>
@@ -184,8 +198,10 @@
 
 
 
+
                       Landmarks</span></a></li>
                 <li><a href="About_Customising_VoicePacks.html"><span>Voice
+
 
 
 
@@ -194,8 +210,10 @@
 
 
 
+
                       Requests</span></a></li>
                 <li><a href="About_Customising_CarClasses.html"><span>Car
+
 
 
 
@@ -229,35 +247,40 @@
           <tr>
             <td width="33%" valign="top" align="center">Assetto Corsa<br>
             </td>
-            <td width="33%" valign="top" align="center">F1 2018/2019**<br>
+            <td width="33%" valign="top" align="center">F1 2018**<br>
             </td>
             <td width="33%" valign="top" align="center">Project Cars<br>
             </td>
           </tr>
           <tr>
             <td valign="top" align="center">Assetto Corsa Competizione*</td>
-            <td valign="top" align="center">F1 2020**</td>
+            <td valign="top" align="center">F1 2019**</td>
             <td valign="top" align="center">Project Cars 2<br>
             </td>
           </tr>
           <tr>
             <td valign="top" align="center">Automobilista<br>
             </td>
+            <td valign="top" align="center">F1 2020**</td>
+            <td valign="top" align="center">Project Cars 3<br>
+            </td>
+          </tr>
+          <tr>
+            <td valign="top" align="center">Automobilista 2 </td>
             <td valign="top" align="center">Formula Truck 2013<br>
             </td>
             <td valign="top" align="center">RaceRoom Racing Experience<br>
             </td>
           </tr>
           <tr>
-            <td valign="top" align="center">Automobilista 2<br>
-            </td>
+            <td valign="top" align="center">Copa Petrobras de Marcas </td>
             <td valign="top" align="center">Game Stockcar 2013<br>
             </td>
             <td valign="top" align="center">rFactor 1<br>
             </td>
           </tr>
           <tr>
-            <td valign="top" align="center">Copa Petrobras de Marcas<br>
+            <td valign="top" align="center">Richard Burns Rally<br>
             </td>
             <td valign="top" align="center">iRacing<br>
             </td>
@@ -279,6 +302,7 @@
       <br>
       There is an <b>Android </b>version for Project Cars 1and 2 on <a href="https://play.google.com/store/apps/details?id=com.britton_it_ltd.crewchief.full&amp;gl=GB">Google
 
+
         Play</a><br>
       <br>
       If you're not familiar with Crew Chief, check out these <a href="http://thecrewchief.org/forumdisplay.php?22-Crew-Chief-videos">videos</a>.<br>
@@ -292,6 +316,7 @@
           <td valign="top"><br>
           </td>
           <td width="20%" valign="top" align="right"><a href="https://discord.com/channels/322071247032942592/406527523455893504">Discord
+
 
 
 
