Add new help page VoiceRecognition_VoiceCommandsPitstopManagement Reformatted as a table showing which games use which commands

--- a/HelpFiles/menu.html
+++ b/HelpFiles/menu.html
@@ -133,6 +133,7 @@
               <ul>
                 <li><a href="VoiceRecognition_VoiceCommandsAll.html"><span>All</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsGrouped.html"><span>Grouped</span></a></li>
+                <li><a href="VoiceRecognition_VoiceCommandsPitstopManagement.html"><span>Pitstop Management</span></a></li>
                 <li><a
                     href="VoiceRecognition_VoiceCommandsCheatSheet.html"><span>Cheat
 
