--- a/public/GettingStarted_nAudio.html
+++ b/public/GettingStarted_nAudio.html
@@ -124,6 +124,7 @@
               <ul>
                 <li><a href="VoiceRecognition_VoiceCommandsAll.html"><span>All</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsGrouped.html"><span>Grouped</span></a></li>
+                <li><a href="VoiceRecognition_VoiceCommandsPitstopManagement.html"><span>Pitstop Management</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsCheatSheet.html"><span>Cheat
 
 
