--- a/public/VoiceRecognition_VoiceCommandsGrouped.html
+++ b/public/VoiceRecognition_VoiceCommandsGrouped.html
@@ -124,6 +124,7 @@
               <ul>
                 <li><a href="VoiceRecognition_VoiceCommandsAll.html"><span>All</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsGrouped.html"><span>Grouped</span></a></li>
+                <li><a href="VoiceRecognition_VoiceCommandsPitstopManagement.html"><span>Pitstop Management</span></a></li>
                 <li><a href="VoiceRecognition_VoiceCommandsCheatSheet.html"><span>Cheat
 
 
@@ -390,73 +391,6 @@
       &nbsp;&nbsp;&nbsp;What will happen if I pit?<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>play estimate of traffic
         and race positions on pit exit, if you were to pit on this lap</i><br>
-      <h4>Pitstop management</h4>
-      <p><font color="#009900"><font color="#6666cc">iRacing-specific</font><br>
-          R3E-specific</font><br>
-      </p>
-      <h5>Fuel</h5>
-      <p><font color="#6666cc">"Pitstop add [X liters]"<br>
-          "Pitstop clear fuel"<br>
-          "Pitstop fuel to the end" / "pitstop fuel to the end of the
-          race"<br>
-        </font><br>
-        <font color="#009900">"Pitstop / box, refuel"<br>
-          "Pitstop / box, don't refuel"</font><br>
-      </p>
-      <h5>Tyres</h5>
-      <p>"Pitstop / box, change all tyres"<br>
-        "Pitstop / box, clear tyres" / "Pitstop / box, don't change tyres"<br>
-        <br>
-        <font color="#009900">"Pitstop / box, change front tyres only"<br>
-          "Pitstop / box, change rear tyres only"</font><br>
-        <br>
-        <font color="#6666cc">"Pitstop change left side tyres"<br>
-          "Pitstop change right side tyres"</font></p>
-      <p><font color="#6666cc">"Pitstop change left front tyre"<br>
-          "Pitstop change right front tyre"<br>
-          "Pitstop change left rear tyre"<br>
-          "Pitstop change right rear tyre"<br>
-          <br>
-          "Pitstop change tyres pressure [ new value ]"<br>
-          "Pitstop change left front tyre pressure [ new value ]"<br>
-          "Pitstop change right front tyre pressure [ new value ]"<br>
-          "Pitstop change left rear tyre pressure [ new value ]"<br>
-          "Pitstop change right rear tyre pressure [ new value ]"<br>
-        </font><br>
-        <font color="#009900">"Pitstop / box, next tyre compound"<br>
-          "Pitstop / box, hard tyres"<br>
-          "Pitstop / box, medium tyres"<br>
-          "Pitstop / box, soft tyres"<br>
-          "Pitstop / box, prime tyres"<br>
-          "Pitstop / box, primary tyres"<br>
-          "Pitstop / box, option tyres:"<br>
-          "Pitstop / box, alternate tyres"</font><br>
-      </p>
-      <h5>Repairs</h5>
-      <p><font color="#6666cc">"Pitstop fast repair / pitstop repair"<br>
-          "Pitstop clear fast repair"</font><br>
-        <br>
-        <font color="#009900">"Pitstop / box, fix front aero only"<br>
-          "Pitstop / box, fix rear aero only"<br>
-          "Pitstop / box, fix all aero"<br>
-          "Pitstop / box, don't fix aero"<br>
-          "Pitstop / box, fix suspension"<br>
-          "Pitstop / box, don't fix suspension"</font><br>
-      </p>
-      <h5>Penalties</h5>
-      <p><font color="#009900">"Pitstop / box, serve penalty"<br>
-          "Pitstop / box, don't serve penalty"</font><br>
-      </p>
-      <h5>Misc</h5>
-      <p><font color="#6666cc">"Pitstop clear all" (clears all selected
-          pitstop options)<br>
-          "Pitstop tearoff / pitstop windscreen"<br>
-          "Pitstop clear tearoff / pitstop clear windscreen"</font><br>
-        <br>
-        <font color="#009900">"What are the pit actions" / "what's the
-          pitstop plan"<br>
-        </font><br>
-      </p>
       <h4>Other drivers</h4>
       Watch [opponent driver last name]<br>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>tells the app to report
@@ -618,72 +552,7 @@
       &nbsp;&nbsp;&nbsp;What's my incident count<br>
       What's the incident limit<br>
       <br>
-      Pitstop add [X liters]<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>adds X amount of fuel next
-        pitstop</i><br>
-      Pitstop tearoff<br>
-      &nbsp;&nbsp;&nbsp;Pitstop windscreen<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>enable next pitstop</i><br>
-      Pitstop fast repair<br>
-      &nbsp;&nbsp;&nbsp;Pitstop repair<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>enable fast repair next
-        pitstop</i><br>
-      Pitstop clear all<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>clears all selected pitstop
-        options</i><br>
-      Pitstop clear tyres<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>clears all tyre selections
-        next pitstop</i><br>
-      Pitstop clear tearoff<br>
-      &nbsp;&nbsp;&nbsp;Pitstop clear windscreen<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>clears tearoff selection
-        next pitstop</i><br>
-      Pitstop clear fast repair<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>clears fast repair
-        selection next pitstop</i><br>
-      Pitstop clear fuel<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>clears fuel refueling next
-        pitstop</i><br>
-      Pitstop change all tyres<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change all tyres next
-        pitstop</i><br>
-      Pitstop change left front tyre<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change left front tyre next
-        pitstop</i><br>
-      Pitstop change right front tyre<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change right front tyre
-        next pitstop</i><br>
-      Pitstop change left rear tyre<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change left rear tyre next
-        pitstop</i><br>
-      Pitstop change right rear tyre<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change right rear tyre next
-        pitstop</i><br>
-      Pitstop change left side tyres<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change left side tyres next
-        pitstop</i><br>
-      Pitstop change right side tyres<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change right side tyres
-        next pitstop</i><br>
-      Pitstop change tyres pressure [new value]<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change right rear tyre
-        pressure next pitstop</i><br>
-      Pitstop change left front tyre pressure [new value]<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change left front tyre next
-        pressure pitstop</i><br>
-      Pitstop change right front tyre pressure [new value]<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change right front tyre
-        pressure next pitstop</i><br>
-      Pitstop change left rear tyre pressure [new value]<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change left rear tyre
-        pressure next pitstop</i><br>
-      Pitstop change right rear tyre pressure [new value]<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i>change right rear tyre
-        pressure next pitstop</i><br>
-      Pitstop fuel to the end<br>
-      &nbsp;&nbsp;&nbsp;Pitstop fuel to the end of the race<br>
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;add the fuel amount the app
-      calculates you'll need to finish the race<br>
+      <br>
     </div>
     <hr width="100%" size="2">
     <table style="font-family:'Lucida Sans Unicode';font-size:13px;" width="100%" cellspacing="0" cellpadding="0" border="0">
