Profiles added More tweaks

--- a/HelpFiles/VoiceRecognition_VoiceCommandsPitstopManagement.html
+++ b/HelpFiles/VoiceRecognition_VoiceCommandsPitstopManagement.html
@@ -31,7 +31,8 @@
                 </font></b> </td>
           </tr>
           <tr>
-            <td width="70%" valign="top">Pitstop add [X litres]</td>
+            <td width="70%" valign="top">Pitstop add [X litres /
+              gallons]</td>
             <td valign="top" align="center">X<br>
             </td>
             <td valign="top" align="center"><br>
@@ -47,7 +48,7 @@
           </tr>
           <tr>
             <td width="70%" valign="top">Pitstop fuel to the end /
-              pitstop fuel to the end of the race</td>
+              pitstop fuel to the end of the race*</td>
             <td valign="top" align="center">X</td>
             <td valign="top" align="center"><br>
             </td>
@@ -69,24 +70,32 @@
             <td width="10%" valign="top" align="center"><br>
             </td>
           </tr>
-		  <tr>
-            <td width="70%" valign="top">Fuel to the end /
-              fuel to the end of the race</td>
-            <td valign="top" align="center"></td>
+          <tr>
+            <td width="70%" valign="top">Fuel to the end / fuel to the
+              end of the race</td>
+            <td valign="top" align="center"><br>
+            </td>
             <td valign="top" align="center">X<br>
             </td>
-            <td width="10%" valign="top" align="center"></td>
+            <td width="10%" valign="top" align="center"><br>
+            </td>
           </tr>
-		  <tr>
+          <tr>
             <td width="70%" valign="top">Add fuel [X litres]</td>
-            <td valign="top" align="center"></td>
+            <td valign="top" align="center"><br>
+            </td>
             <td valign="top" align="center">X<br>
             </td>
-            <td width="10%" valign="top" align="center"></td>
+            <td width="10%" valign="top" align="center"><br>
+            </td>
           </tr>
         </tbody>
       </table>
       <br>
+      * See also the Properties <font size="-1"><i><b>iracing_enable_auto_fuel_to_end_of_race</b>
+        </i>and <i><b>rf2</b></i><i><b>_enable_auto_fuel_to_end_of_race
+          </b></i></font><i><br>
+      </i><br>
       <table width="764" height="706" cellspacing="2" cellpadding="2"
         border="1">
         <tbody>
@@ -538,7 +547,7 @@
       <h4>R3E only<br>
       </h4>
       <p><font color="#009900"><font color="#000000">What are the pit
-            actions / what's the pitstop plan</font><br>
+            actions? / What's the pitstop plan</font>?<br>
         </font><br>
       </p>
     </div>
