--- a/public/VoiceRecognition_VoiceCommandsGrouped.html
+++ b/public/VoiceRecognition_VoiceCommandsGrouped.html
@@ -340,11 +340,13 @@
         verbose response)</i><br>
       <h4>Brakes</h4>
       What are my brake temperatures / temps<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; <i>gives the actual temps</i> <br>
       How are my:<br>
       &nbsp;&nbsp;&nbsp;brakes<br>
       &nbsp;&nbsp;&nbsp;brake temps / temperatures<br>
       <h4>Tyres</h4>
       What are my tyre temperatures / temps<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; <i>gives the actual temps</i> <br>
       What tyres am I on<br>
       &nbsp;&nbsp;&nbsp;What tyre am I on<br>
       &nbsp;&nbsp;&nbsp;What tyre type am I on<br>
@@ -352,6 +354,11 @@
         you're currently using, if available</i><br>
       How are my:<br>
       &nbsp;&nbsp;&nbsp;tyre temps / temperatures<br>
+      <h4>Engine</h4>
+      <p>What's my <br>
+        &nbsp;&nbsp; oil temp<br>
+        &nbsp;&nbsp; water temp<br>
+        &nbsp;&nbsp;&nbsp;&nbsp; <i>gives the actual temps</i></p>
       <h4>Fuel</h4>
       How's my fuel<br>
       What's my fuel usage<br>
