--- a/HelpFiles/About_ChangeLog.html
+++ b/HelpFiles/About_ChangeLog.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -14,8 +14,10 @@
     <div style="font-family:'Lucida Sans Unicode';font-size:13px;"
       class="main">
       <h4>Version 4.13.0.0:</h4>
-      <p> &nbsp;&nbsp;* <font color="#ff0000"><b>rFactor 2 now needs
-            Vytautas Leonavičius' rFactor 2 Plugin version 3.7.14.2</b></font>&nbsp;
+      <p> &nbsp;&nbsp;* <font color="#ff0000"><b>
+    rFactor 2 now needs
+    Vytautas Leonavi&#x010D;ius' rFactor 2 Plugin version 3.7.14.2
+</b></font>&nbsp;
         It's part of this CC version and will be installed automatically
         but note that any other apps that use it will need to be updated<br>
         &nbsp;&nbsp;* rFactor 2 - added voice control of pit menu,
