Update change_log_for_auto_updated.html - Leonavi&#x010D;ius

--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -3,7 +3,7 @@
 <body>
 <h2>Version 4.13.0.0</h2>
 <ul>
-	<li>rFactor 2 now needs Vytautas Leonavičius' rFactor 2 Plugin version 3.7.14.2  It's part of this CC version and will be installed automatically but note that any other apps that use it will need to be updated</li>
+	<li>rFactor 2 now needs Vytautas Leonavi&#x010D;ius' rFactor 2 Plugin version 3.7.14.2  It's part of this CC version and will be installed automatically but note that any other apps that use it will need to be updated</li>
 	<li>Added Rally mode and support for Richard Burns Rally</li>
 	<li>Added rudamentary pCars3 support</li>
 	<li>Added support for controller 'point of view' buttons (should allow direction-pads to be used for button assignments)</li>
