--- a/change_log_for_auto_updated.html
+++ b/change_log_for_auto_updated.html
@@ -7,6 +7,7 @@
 	<li>Added an option to only use sounds which are gender-neutral. The app has, historically, assumed all players are male so contains lots of sounds with words like words like 'man', 'guy', 'he' etc which is a bit silly. If you enable the 'Block sounds which refer to drivers as male' property the app will only use sounds that are gender-neutral ('driver', 'car', etc). Note that this requires the latest sound pack update to work</li>
 	<li>RF2 - tweaked the behaviour of the pit manager system so it only inspects the pit menu layout when it's first invoked, rather than at the start of a session</li>
 	<li>RF2 - added an option to disable the pit menu manager ('enable rF2 pit manager' property)</li>
+	<li>RF2 - fixed initialisation of pit menu manager</li>
 </ul>
 <h2>Version 4.13.0.0</h2>
 <ul>
