Help: nAudio page improved

--- a/HelpFiles/GettingStarted_nAudio.html
+++ b/HelpFiles/GettingStarted_nAudio.html
@@ -9,17 +9,36 @@
     <script src="jquery-latest.min.js" type="text/javascript"></script>
     <script src="script.js"></script>
   </head>
-  <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#dddddd" alink="#EE0000">
-<div style="font-family:'Lucida Sans Unicode';font-size:13px;" class="main">
-<h3>Choosing Audio method</h3>
-The nAudio playback library allows playback device selection and higher volumes. It can also play messages in stereo.<br>
-<br>
-It allows speech recognition device selection but voice recognition <b>Trigger word</b> and <b>Press and release button</b> are not available with nAudio.<br>
-<br>
-There are two Properties selecting the audio method: <b>Use nAudio for playback</b> and <b>Use nAudio for speech recognition</b>.<br>
-<br>
-nAudio offers two output interface types - WaveOut and WASAPI.  WaveOut is more compatible, but WASAPI is more responsive/direct playback.<br>
-</div>
-
-</body>
+  <body vlink="#551A8B" text="#000000" link="#0000EE" bgcolor="#dddddd"
+    alink="#EE0000">
+    <div style="font-family:'Lucida Sans Unicode';font-size:13px;"
+      class="main">
+      <h3>Choosing Audio methods</h3>
+      Crew Chief offers the choice of using <b>nAudio </b>instead of
+      the standard Windows audio library.&nbsp; There are two Properties
+      for selecting the audio method:<br>
+      <h4>Use nAudio for playback</h4>
+      Recommended. Using nAudio for playback allows device selection and
+      higher volumes. It can also play messages in stereo.<br>
+      <i>However, </i>nAudio has been known to cause some issues so
+      it's worth disabling it if Crew Chief is misbehaving.<br>
+      <br>
+      nAudio offers two output interface types - <b>WaveOut </b>and <b>WASAPI</b>.
+      WaveOut is more compatible, but WASAPI is more responsive/direct
+      playback.<br>
+      <br>
+      If not using nAudio for playback you might need to change your
+      default sound 'playback' device in the Windows Control Panel so
+      Crew Chief sends audio to the right device. Windows 10 also
+      includes the option to route audio from a specific application to
+      a chosen output device.<br>
+      <h4>Use nAudio for speech recognition</h4>
+      Not recommended. It allows speech recognition device selection but
+      voice recognition <b>Trigger word</b> and <b>Press and release
+        button</b> are not available with nAudio. Also Crew Chief works
+      better if this setting is disabled and instead your preferred
+      microphone is set as the default sound recording device in the
+      Windows sounds Control Panel.<br>
+    </div>
+  </body>
 </html>
