--- a/public/VoiceRecognition_CommandMacros.html
+++ b/public/VoiceRecognition_CommandMacros.html
@@ -84,7 +84,7 @@
                 <li><a href="GettingStarted_GameSpecific_RichardBurnsRally.html"><span>Richard Burns Rally</span></a></li>
               </ul>
             </li>
-            <li><a href="GettingStarted_nAudio.html"><span>nAudio </span></a></li>
+            <li><a href="GettingStarted_nAudio.html"><span>Choosing Audio methods</span></a></li>
             <li><a href="VoiceRecognition_InstallationTraining.html"><span>Voice
 
 
